[package]
name = "jwt-service"
version = "0.1.0"
edition = "2024"

[lib]
name = "jwt_service"
path = "src/lib.rs"

[[bin]]
name = "jwt_service_cli"
path = "src/bin.rs"

[dependencies]
axum = "0.8.4"
color-eyre = "0.6.5"
hickory-resolver = "0.25.2"
# jsonwebtoken = "9.3.1"
livekit-api = "0.4.4"
reqwest = { version = "0.12.22", features = ["json"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
thiserror = "2.0.12"
tokio = { version = "1.46.1", features = ["macros", "rt-multi-thread", "signal"] }
tracing = "0.1.41"

[dev-dependencies]
tower = "0.5.2"
