[package]
name = "jwt-service"
version = "0.1.0"
edition = "2024"

[lib]
name = "jwt_service"
path = "src/lib.rs"

[[bin]]
name = "jwt_service_cli"
path = "src/bin.rs"

[dependencies]
axum = "0.8.4"
base64 = "0.22"
color-eyre = "0.6.5"
hickory-resolver = "0.25.2"
# jsonwebtoken = "9.3.1"
livekit-api = { version = "0.4.4", features = ["rustls-tls-webpki-roots", "signal-client-tokio"] }
reqwest = { version = "0.12.22", features = ["json", "rustls-tls", "hickory-dns"], default-features = false }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
sha2 = "0.10"
thiserror = "2.0.12"
tokio = { version = "1.46.1", features = ["macros", "rt-multi-thread", "signal"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.20", features = ["env-filter"] }
url = "2.5.4"

[dev-dependencies]
rstest = "0.23"
tower = "0.5.2"
